--- a/app/src/main/res/layout/activity_request_details.xml
+++ b/app/src/main/res/layout/activity_request_details.xml
@@ -221,6 +221,7 @@
                                 android:gravity="center"
                                 android:text="@string/no_supplier_cost"
                                 android:textColor="@color/light_gray"
+                                android:textSize="16sp"
                                 android:textStyle="bold" />
 
 
