--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -46,8 +46,7 @@
                 android:hint="@string/type_to_search"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
-                android:padding="8dp"
-                android:autofillHints="" />
+                android:padding="8dp" />
 
             <ImageView
                 android:id="@+id/filter_btn"
@@ -66,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            tools:listitem="@layout/item_projects"/>
+            tools:listitem="@layout/item_projects" />
 
 
     </LinearLayout>
@@ -86,10 +85,9 @@
         app:tint="@color/white" />
 
 
-
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 </RelativeLayout>
