--- a/app/src/main/res/layout/item_job_order.xml
+++ b/app/src/main/res/layout/item_job_order.xml
@@ -16,18 +16,19 @@
         app:cardElevation="3dp">
 
         <RelativeLayout
+            android:id="@+id/parent_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/list_item_bg">
 
             <LinearLayout
-                android:id="@+id/parent_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toStartOf="@+id/status"
                 android:orientation="horizontal">
 
                 <View
+                    android:id="@+id/status_color"
                     android:layout_width="5dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/status_yellow" />
@@ -103,7 +104,7 @@
                 android:paddingTop="5dp"
                 android:paddingEnd="15dp"
                 android:paddingBottom="5dp"
-                android:text="Approved"
+                android:text="In Progress"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
         </RelativeLayout>
