--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,7 @@
         //spinner style
         <item name="android:spinnerItemStyle">@style/spinnerItemStyle</item>
 
+
         //font style
 <!--        <item name="android:textViewStyle">@style/PoppinsTextViewStyle</item>-->
 <!--        <item name="android:buttonStyle">@style/PoppinsButtonStyle</item>-->
@@ -26,10 +27,18 @@
 
     </style>
 
+    <style name="blackSpinnerTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:spinnerItemStyle">@style/spinnerItemStyle_black</item>
+    </style>
+
 
 
     <style name="spinnerItemStyle" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="spinnerItemStyle_black" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
+        <item name="android:textColor">@color/black</item>
     </style>
 
 
