--- a/app/src/main/res/layout/activity_add_production.xml
+++ b/app/src/main/res/layout/activity_add_production.xml
@@ -276,7 +276,6 @@
                     android:text="@string/screen"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
-
                 <RadioGroup
                     android:id="@+id/screen"
                     android:layout_width="match_parent"
@@ -297,6 +296,36 @@
                         android:layout_marginStart="20dp"
                         android:text="@string/no" />
                 </RadioGroup>
+
+                <LinearLayout
+                    android:id="@+id/screen_specs_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/screen_specs"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+                    <EditText
+                        android:id="@+id/screen_specs"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/et_white"
+                        android:hint="@string/screen_specs"
+                        android:importantForAutofill="no"
+                        android:inputType="text"
+                        android:padding="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+
             </LinearLayout>
 
             <LinearLayout
