--- a/app/src/main/res/layout/activity_job_order_details.xml
+++ b/app/src/main/res/layout/activity_job_order_details.xml
@@ -40,11 +40,45 @@
 
         </LinearLayout>
 
+
+        <params.com.stepview.StatusViewScroller
+            android:id="@+id/status_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:entries="@array/job_orders_steps"
+            app:alignStatusWithCurrent="true"
+            app:circleColor="@color/green"
+            app:circleColorCurrent="@color/stepper_gray"
+            app:circleColorIncomplete="@color/stepper_gray"
+            app:circleColorType="fillStroke"
+            app:circleStrokeColor="@color/green"
+            app:circleStrokeColorCurrent="@color/green"
+            app:circleStrokeColorIncomplete="@color/stepper_gray"
+            app:circleStrokeWidth="2dp"
+            app:completeDrawable="@drawable/ic_done"
+            app:currentCount="2"
+            app:currentStepZoom="0.2"
+            app:drawLabels="true"
+            app:lineColor="@color/light_gray"
+            app:lineColorCurrent="@color/green"
+            app:lineColorIncomplete="@color/light_gray"
+            app:lineGap="5dp"
+            app:lineLength="35dp"
+            app:lineWidth="0.7dp"
+            app:stepCount="4"
+            app:strictObeyLineLength="true"
+            app:textColorLabelsCurrent="@color/black"
+            app:textColorLabelsIncomplete="@color/light_gray"
+            app:textSizeLabels="18sp" />
+
         <com.shuhart.stepview.StepView
             android:id="@+id/step_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
+            android:visibility="gone"
             app:sv_animationType="All"
             app:sv_doneCircleColor="@color/green"
             app:sv_doneCircleRadius="20dp"
@@ -69,10 +103,65 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/request_details_bg"
         android:paddingStart="20dp"
         android:paddingTop="20dp"
-        android:paddingEnd="20dp">
+        android:paddingEnd="20dp"
+        android:background="@color/request_details_bg">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="3dp">
+
+            <RelativeLayout
+                android:id="@+id/parent_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_pdf"
+                        android:text="@string/request_id"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:text="@string/job_order"
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/download"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="20dp"
+                    android:text="@string/download"
+                    android:textColor="@color/text_dark_blue"
+                    android:textSize="18sp" />
+
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
