--- a/app/src/main/res/layout/activity_request_details.xml
+++ b/app/src/main/res/layout/activity_request_details.xml
@@ -69,7 +69,7 @@
                 app:sv_steps="@array/request_steps" />
 
             <params.com.stepview.StatusViewScroller
-                android:id="@+id/status_view"
+                android:id="@+id/steps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -85,7 +85,7 @@
                 app:circleStrokeColorIncomplete="@color/stepper_gray"
                 app:circleStrokeWidth="2dp"
                 app:completeDrawable="@drawable/ic_done"
-                app:currentCount="2"
+                app:currentCount="1"
                 app:currentStepZoom="0.2"
                 app:drawLabels="true"
                 app:lineColor="@color/light_gray"
@@ -117,8 +117,39 @@
                 android:paddingBottom="10dp">
 
                 <LinearLayout
+                    android:id="@+id/sales_approval_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/sales_approve"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/btn_green"
+                        android:text="@string/approve"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/sales_reject"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/btn_red"
+                        android:text="@string/reject"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/white_curved"
                     android:orientation="vertical"
                     android:paddingStart="15dp"
@@ -193,11 +224,23 @@
                             android:padding="5dp"
                             android:src="@drawable/ic_arrow_down" />
                     </RelativeLayout>
+
                     <RelativeLayout
                         android:id="@+id/request_cost_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:visibility="gone">
+
+                        <ImageView
+                            android:id="@+id/edit_cost"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_edit"
+                            android:padding="5dp"
+                            android:layout_alignParentEnd="true"
+                            android:visibility="gone"/>
+
+
 
                         <LinearLayout
                             android:id="@+id/no_cost_container"
@@ -205,14 +248,14 @@
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
                             android:paddingTop="20dp"
-                            android:visibility="gone"
-                            android:paddingBottom="20dp">
+                            android:paddingBottom="20dp"
+                            android:visibility="gone">
 
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_supplier_cost"
-                                android:contentDescription="@string/description" />
+                                android:contentDescription="@string/description"
+                                android:src="@drawable/ic_supplier_cost" />
 
                             <TextView
                                 android:layout_width="match_parent"
