--- a/app/src/main/res/layout/fragment_production_supplier_cost_view.xml
+++ b/app/src/main/res/layout/fragment_production_supplier_cost_view.xml
@@ -234,11 +234,12 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/change_status_container"
+                android:id="@+id/nagat_approval_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:weightSum="2">
 
                 <LinearLayout
@@ -249,7 +250,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/reject"
+                        android:id="@+id/nagat_reject"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
@@ -272,7 +273,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/approve"
+                        android:id="@+id/nagat_approve"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
@@ -296,6 +297,7 @@
 
 
             </LinearLayout>
+
 
         </LinearLayout>
     </ScrollView>
