--- a/app/src/main/res/layout/fragment_purchase_supplier_cost_view.xml
+++ b/app/src/main/res/layout/fragment_purchase_supplier_cost_view.xml
@@ -202,11 +202,12 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/change_status_container"
+                android:id="@+id/nagat_approval_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:weightSum="2">
 
                 <LinearLayout
@@ -217,7 +218,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/reject"
+                        android:id="@+id/nagat_reject"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
@@ -240,7 +241,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/approve"
+                        android:id="@+id/nagat_approve"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
