--- a/app/src/main/res/layout/activity_requests.xml
+++ b/app/src/main/res/layout/activity_requests.xml
@@ -71,7 +71,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:visibility="gone">
 
 
             <EditText
