--- a/app/src/main/res/layout/activity_edit_photography_supplier_cost.xml
+++ b/app/src/main/res/layout/activity_edit_photography_supplier_cost.xml
@@ -9,7 +9,7 @@
     android:paddingStart="15dp"
     android:paddingTop="15dp"
     android:paddingEnd="15dp"
-    tools:context=".supplier_costs.add.AddPhotographySupplierCostActivity">
+    tools:context=".supplier_costs.edit.EditPhotographySupplierCostActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:text="@string/add_supplier_cost"
+            android:text="@string/edit_supplier_cost"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
