--- a/app/src/main/res/layout/activity_edit_purchase_supplier_cost.xml
+++ b/app/src/main/res/layout/activity_edit_purchase_supplier_cost.xml
@@ -9,7 +9,7 @@
     android:paddingStart="15dp"
     android:paddingTop="15dp"
     android:paddingEnd="15dp"
-    tools:context=".supplier_costs.add.AddPhotographySupplierCostActivity">
+    tools:context=".supplier_costs.edit.EditPurchaseSupplierCostActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:text="@string/add_supplier_cost"
+            android:text="@string/edit_supplier_cost"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -74,6 +74,32 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/purchasing_type"
+                    android:textColor="@color/gray"
+                    android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/purchasing_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/et_gray_border"
+                    android:hint="@string/purchasing_type"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
 
             <LinearLayout
