--- a/app/src/main/res/layout/activity_add_print.xml
+++ b/app/src/main/res/layout/activity_add_print.xml
@@ -473,6 +473,7 @@
 
 
                     <TextView
+                        android:id="@+id/files_chosen"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint="@string/no_file_choose"
