--- a/app/src/main/res/layout/item_projects.xml
+++ b/app/src/main/res/layout/item_projects.xml
@@ -279,8 +279,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
-                android:orientation="horizontal"
-                android:weightSum="3">
+                android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/done"
