--- a/app/src/main/res/layout/fragment_production_view.xml
+++ b/app/src/main/res/layout/fragment_production_view.xml
@@ -371,21 +371,12 @@
                     android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
-                <LinearLayout
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/attaches_recycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/et_white"
-                    android:padding="5dp">
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/no_file_choose"
-                        android:textColor="@color/black"
-                        android:textSize="16sp" />
-                </LinearLayout>
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp" />
 
 
             </LinearLayout>
