--- a/app/src/main/res/layout/activity_job_orders.xml
+++ b/app/src/main/res/layout/activity_job_orders.xml
@@ -44,10 +44,10 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:visibility="gone">
+            android:layout_marginTop="10dp">
 
             <EditText
+                android:id="@+id/search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -69,7 +69,8 @@
                 android:layout_marginStart="5dp"
                 android:background="@drawable/black_curved"
                 android:padding="10dp"
-                android:src="@drawable/ic_filter" />
+                android:src="@drawable/ic_filter"
+                android:visibility="gone"/>
 
         </RelativeLayout>
 
