--- a/app/src/main/res/layout/activity_job_orders.xml
+++ b/app/src/main/res/layout/activity_job_orders.xml
@@ -69,8 +69,7 @@
                 android:layout_marginStart="5dp"
                 android:background="@drawable/black_curved"
                 android:padding="10dp"
-                android:src="@drawable/ic_filter"
-                android:visibility="gone"/>
+                android:src="@drawable/ic_filter"/>
 
         </RelativeLayout>
 
