--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -58,8 +58,7 @@
                 android:layout_marginStart="5dp"
                 android:background="@drawable/black_curved"
                 android:padding="10dp"
-                android:src="@drawable/ic_filter"
-                android:visibility="gone"/>
+                android:src="@drawable/ic_filter"/>
         </RelativeLayout>
 
         <androidx.recyclerview.widget.RecyclerView
