--- a/app/src/main/res/layout/activity_job_orders.xml
+++ b/app/src/main/res/layout/activity_job_orders.xml
@@ -26,9 +26,9 @@
                 android:id="@+id/back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/description"
                 android:src="@drawable/ic_back"
-                app:tint="@color/black"
-                android:contentDescription="@string/description" />
+                app:tint="@color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -69,16 +69,23 @@
                 android:layout_marginStart="5dp"
                 android:background="@drawable/black_curved"
                 android:padding="10dp"
-                android:src="@drawable/ic_filter"/>
+                android:src="@drawable/ic_filter" />
 
         </RelativeLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            tools:listitem="@layout/item_job_order" />
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                tools:listitem="@layout/item_job_order" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </LinearLayout>
 
